# tool-parallel-exec-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_parallel_exec/: __init__.py
tests/: test_parallel_exec.py
